--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/main.css" type="text/css">
+    <link rel="stylesheet" href="styles/reset.css" type="text/css">
+    <link rel="shortcut icon" type="image/jpg" href="images/external-content.duckduckgo.com.png">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+    <nav id='topnav'>
+        <ul id="leftnav">
+            <li class="leftnavitems">About</li>
+            <li class="leftnavitems">Store</li>
+        </ul>
+        <ul id="rightnav">
+            <li class='rightnavitems'>Jeffmail</li>
+            <li class='rightnavitems'>Imajeffs</li>
+            <li class='navmenu'><img src="images/dots-menu-svgrepo-com.svg" style="height: 1rem; width: 1rem;"</li>
+            <li class='rightnavitems'><input type="button" value="Bezos in" id="login" style="width: 6rem"></li>
+        </ul>
+        
+    </nav>
+
+    <main>
+        <img src="images/epicgooglelogo.png" id="googlelogo">
+        <div class='searchcont'>
+            <input type="search" id="searchinput" class="searchinput searchico">
+        </div>
+        <div id="btns">
+            <input type="button" value="Bezos Search" class="searchbtn">
+            <input type="button" value="I'm Feeling Prime" class="searchbtn">
+        </div>
+    </main>
+
+
+
+    <footer id="footer">
+        <ul id='leftfoot'>
+            <li class="lfitms">About</li>
+            <li class="lfitms">Advertising</li>
+            <li class="lfitms">Business</li>
+            <li class="lfitms">How Bezos works</li>
+        </ul>
+        <ul id='rightfoot'>
+            <li class="rfitms">Privacy Who?</li>
+            <li class="rfitms">My Terms</li>
+            <li class="rfitms">Settings</li>
+        </ul>
+    </footer>
     
 </body>
 </html>
