added credits at the bottom

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul id="rightnav">
             <li class='rightnavitems'>Jeffmail</li>
             <li class='rightnavitems'>Imajeffs</li>
-            <li class='navmenu'><img src="images/dots-menu-svgrepo-com.svg" style="height: 1rem; width: 1rem;"</li>
+            <li class='navmenu'><img src="images/dots-menu-svgrepo-com.svg" style="height: 1rem; width: 1rem;"></li>
             <li class='rightnavitems'><input type="button" value="Bezos in" id="login" style="width: 6rem"></li>
         </ul>
         
@@ -44,6 +44,7 @@
             <li class="lfitms">Business</li>
             <li class="lfitms">How Bezos works</li>
         </ul>
+        <p> Made by Keane</p>
         <ul id='rightfoot'>
             <li class="rfitms">Privacy Who?</li>
             <li class="rfitms">My Terms</li>
